<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activities.SugerenciaActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:src="@drawable/sugerencia"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_sugerencia"
        android:layout_width="365dp"
        android:layout_height="76dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:fontFamily="casual"
        android:hint="@string/et_sugerencia"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/et_calificacion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="378dp"
        android:layout_height="260dp"
        android:fontFamily="casual"
        android:text="@string/tv_sugerencia"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/btn_sueguardado"
        android:layout_width="320dp"
        android:layout_height="55dp"
        android:layout_marginStart="155dp"
        android:layout_marginTop="118dp"
        android:layout_marginEnd="162dp"
        android:layout_marginBottom="229dp"
        android:fontFamily="casual"
        android:includeFontPadding="true"
        android:onClick="clickSugerencia"
        android:text="@string/btn_sueguardado"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_calificacion" />

    <EditText
        android:id="@+id/et_calificacion"
        android:layout_width="365dp"
        android:layout_height="76dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:fontFamily="casual"
        android:hint="@string/et_calificacion"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_sugerencia" />

</androidx.constraintlayout.widget.ConstraintLayout>